sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__indexed-by-select-price-range.snap
---
source: indexes.sqltest
expression: SELECT id, name, price FROM products INDEXED BY idx_products_price WHERE price > 100;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING INDEX idx_products_price (price>?)
