sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__indexed-by-update-sku.snap
---
source: indexes.sqltest
expression: UPDATE products INDEXED BY idx_products_sku SET price = 0 WHERE sku = 'CLEARANCE';
info:
  statement_type: UPDATE
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING COVERING INDEX idx_products_sku (sku=?)
