sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__join-with-index.snap
---
source: indexes.sqltest
expression: |-
  SELECT o.id, o.order_date, i.quantity
      FROM orders o
      JOIN inventory i ON o.id = i.product_id
      WHERE o.customer_id = 100;
info:
  statement_type: SELECT
  tables:
  - inventory
  - o.id
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--MATERIALIZE hash build input for orders AS o
|  `--SEARCH o USING COVERING INDEX idx_orders_customer_date (customer_id=?)
|--HASH JOIN inventory AS i
`--SEARCH o USING COVERING INDEX idx_orders_customer_date (customer_id=?)
