sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__non-covering-needs-table-lookup.snap
---
source: indexes.sqltest
expression: |-
  SELECT warehouse_id, product_id, quantity, last_updated
      FROM inventory
      WHERE warehouse_id = 1 AND product_id = 500;
info:
  statement_type: SELECT
  tables:
  - inventory
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH inventory USING INDEX idx_inventory_covering (warehouse_id=? AND product_id=?)
