sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__not-indexed-select.snap
---
source: indexes.sqltest
expression: SELECT id, name, price FROM products NOT INDEXED WHERE sku = 'ABC123';
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products
